--- a/seeds/translation/en.csv
+++ b/seeds/translation/en.csv
@@ -62,8 +62,8 @@ en;maintainer.form.error.invalidPhone;Ivanlid phone number. Phone numbers may on
 en;maintainer.listing.noMaintainers;No maintainers found
 en;maintainer.updatedAt;Updated at {{updatedAt}}
 en;maintenanceEvent.field.assignedTo;Assigned to
-en;maintenanceEvent.field.description;Description
 en;maintenanceEvent.field.createdAt;Created at
+en;maintenanceEvent.field.description;Description
 en;maintenanceEvent.field.resolvedAt;Resolved at
 en;maintenanceEvent.listing.noEvents;No maintenance events found
 en;navigation.item.appliances;Appliances
@@ -72,19 +72,22 @@ en;navigation.item.organisations;Organisations
 en;navigation.item.profile;Profile
 en;navigation.user.greeting;Hello, <1>{{name}}</1>
 en;navigation.user.signOut;Log out
+en;notSet;Not set
+en;organisation.account.addAccount;Add account
+en;organisation.account.field.email;Email address
 en;organisation.action.activate;Set as active
 en;organisation.action.create;Create a new organisation
 en;organisation.action.delete;Delete organisation
 en;organisation.action.edit;Edit organisation
+en;organisation.appliances.title;Appliances
 en;organisation.create.form.submit;Create organisation
 en;organisation.create.title;New organisation
 en;organisation.edit.form.submit;Update organisation
 en;organisation.edit.title;Edit organisation – {{organisation}}
 en;organisation.field.name;Name
 en;organisation.field.organisationIdentifier;Organisation identifier
-en;organisation.account.addAccount;Add account
-en;organisation.account.field.email;Email address
 en;organisation.logins.title;Logins
+en;organisation.maintainers.title;Maintainers
 en;organisation.noOrganisations;No organisations created
 en;organisation.users.title;Users
 en;role.administrator;Administrator
@@ -97,4 +100,5 @@ en;tab.maintainer.maintainers;Maintainers
 en;tab.maintainer.new;New maintainer
 en;tab.organisation.details;Details
 en;tab.organisation.users;Users
+en;tab.organisation.preferences;Preferences
 en;updatedAt;Updated at
