update error codes
update error handling to allow throwing an array

update to require acceptTOS flag from body when creating an account

--- a/seeds/translation/en.csv
+++ b/seeds/translation/en.csv
@@ -88,6 +88,7 @@ en;organisation.edit.form.submit;Update organisation
 en;organisation.edit.title;Edit organisation – {{organisation}}
 en;organisation.field.name;Name
 en;organisation.field.organisationIdentifier;Organisation identifier
+en;organisation.logins.noLogins;No logins found
 en;organisation.logins.title;Logins
 en;organisation.maintainers.title;Maintainers
 en;organisation.noOrganisations;No organisations created
