--- a/seeds/translation/en.csv
+++ b/seeds/translation/en.csv
@@ -9,7 +9,7 @@ en;account.field.lastName;Last name
 en;account.field.name;Name
 en;account.field.password;Password
 en;account.field.retypePassword;Retype password
-en;account.field.role;Role
+en;account.field.userRole;Role
 en;account.registration.authenticate;I already have an account
 en;account.registration.form.error.invalidEmail;Invalid email address.
 en;account.registration.form.error.passwordsDontMatch;Passwords do not match.
@@ -75,6 +75,7 @@ en;navigation.item.profile;Profile
 en;navigation.user.greeting;Hello, <1>{{name}}</1>
 en;navigation.user.signOut;Log out
 en;notSet;Not set
+en;none;None
 en;organisation.account.addAccount;Add account
 en;organisation.account.field.email;Email address
 en;organisation.action.activate;Set as active
@@ -94,9 +95,10 @@ en;organisation.maintainers.title;Maintainers
 en;organisation.noOrganisations;No organisations created
 en;organisation.selectOrganisation;Select organisation
 en;organisation.users.title;Users
-en;role.administrator;Administrator
-en;role.maintainer;Maintainer
-en;role.moderator;Moderator
+en;userRole.name.administrator;Administrator
+en;userRole.name.maintainer;Maintainer
+en;userRole.name.moderator;Moderator
+en;userRole.action.setUserRole;Set role
 en;submit;Submit
 en;tab.appliance.appliances;Appliances
 en;tab.appliance.new;New appliance
